--- a/res/layout/activity_listview_product_list.xml
+++ b/res/layout/activity_listview_product_list.xml
@@ -4,32 +4,29 @@
     android:layout_height="fill_parent"
     android:orientation="horizontal" >
     
+    <!-- 바코드 -->
     <TextView android:id="@+id/item1"
-        android:text="바코드"
         android:layout_height="fill_parent"
-        android:layout_width="0dip"
-        android:layout_weight="1"
+        android:layout_width="110dp"
         android:gravity="center"
     />
+    <!-- 상품명 -->
     <TextView android:id="@+id/item2"
-        android:text="상품명"
         android:layout_height="fill_parent"
         android:layout_width="0dip"
         android:layout_weight="1"
         android:gravity="center"
     />
+    <!-- 매입가 -->
     <TextView android:id="@+id/item3"
-        android:text="매입가"
+        android:layout_width="80dp"
         android:layout_height="fill_parent"
-        android:layout_width="0dip"
-        android:layout_weight="1"
         android:gravity="center"
     />
+    <!-- 판매가 -->
     <TextView android:id="@+id/item4"
-        android:text="판매가"
+        android:layout_width="80dp"
         android:layout_height="fill_parent"
-        android:layout_width="0dip"
-        android:layout_weight="1"
         android:gravity="center"
     />
    
