--- a/res/layout/activity_select_shop_list.xml
+++ b/res/layout/activity_select_shop_list.xml
@@ -24,7 +24,15 @@
             android:layout_marginLeft="2dp"
             android:textColor="#ffffff"
             android:textSize="20sp"
-            
+            />
+	    <TextView
+            android:id="@+id/textViewDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginLeft="2dp"
+            android:textColor="#ffffff"
+            android:textSize="14sp"
             />
 	    
 	 </LinearLayout>
