--- a/res/layout/activity_compare_price_detail.xml
+++ b/res/layout/activity_compare_price_detail.xml
@@ -125,8 +125,8 @@
         <TextView android:id="@+id/item1"
             android:layout_height="fill_parent"
             android:layout_width="0dip"
-            android:layout_weight="0.7"
-            android:text="바코드"
+            android:layout_weight="1"
+            android:text="지역"
             android:textColor="#d7d7d7"
             android:textStyle="bold"
             android:textSize="14sp"
@@ -139,7 +139,7 @@
             android:layout_height="fill_parent"
             android:layout_width="0dip"
             android:layout_weight="1"
-            android:text="상품명"
+            android:text="평수"
 			android:textColor="#d7d7d7"
             android:textStyle="bold"
             android:textSize="14sp"
