--- a/res/layout/activity_manage_product.xml
+++ b/res/layout/activity_manage_product.xml
@@ -513,7 +513,7 @@
     <!-- ListView (grid_items) -->
     <LinearLayout android:id="@+id/layout"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         >
         <ListView android:id="@+id/listviewProductList"
             android:layout_height="fill_parent"
