--- a/res/layout/activity_purchase_regist.xml
+++ b/res/layout/activity_purchase_regist.xml
@@ -56,6 +56,15 @@
         android:layout_marginTop="10dp"
         android:orientation="horizontal" >
 
+        <CheckBox
+            android:id="@+id/checkBoxFixCustomer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="고정"
+            android:textSize="14sp"
+        />
+        
         <TextView
             android:id="@+id/textView3"
             android:layout_width="0dip"
@@ -136,8 +145,6 @@
 		     android:lines="1"
              android:background="@drawable/white_text_box_small" />
              
-             <requestFocus />
-        
          <requestFocus />
         
          <Button
@@ -168,7 +175,8 @@
 	        android:ems="10"
 	        android:textColor="#000000"
 		    android:singleLine="true"
-		    android:lines="1"		    
+		    android:lines="1"
+            android:inputType="text"   
 	        android:clickable="false" 
 		    android:cursorVisible="false" 
 		    android:focusable="false" 
@@ -277,8 +285,8 @@
             android:textSize="14sp" />
 
          <EditText
-             android:id="@+id/editTextProfitRatio"
-             android:layout_width="0dip"
+            android:id="@+id/editTextProfitRatio"
+            android:layout_width="0dip"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:ems="10"
@@ -316,16 +324,7 @@
 	        android:background="@drawable/purchase_save_btn"
 	        android:scaleY="0.8"
 	        android:layout_gravity="center"/>
-	        
-	    <CheckBox
-	    	android:id="@+id/checkBoxRejectedProduct"
-	    	android:layout_width="0dip"
-	    	android:layout_height="wrap_content"
-	    	android:layout_weight="1"
-	    	android:text="반품"
-	    	android:textSize="14sp"
-	    	/>
-	           
+	        	           
        <Button
 	        android:id="@+id/buttonRenew"
 	        style="?android:attr/buttonStyleSmall"
@@ -334,6 +333,16 @@
 	        android:layout_marginLeft="10dip"
 	        android:scaleY="0.8"
 	        android:background="@drawable/replace_btn" />
+       
+        <Button
+            android:id="@+id/buttonSend"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:scaleY="0.8"
+            android:background="@drawable/clear_all_btn"/>
        	    
 	</LinearLayout>
 	
@@ -360,21 +369,17 @@
 	
     <!-- Header -->
     <LinearLayout android:id="@+id/header"
-        
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         >
         <TextView android:id="@+id/item1"
-            android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="1"
+        android:layout_height="fill_parent"
+        android:layout_width="110dp"
             android:text="코드"
             android:textColor="#d7d7d7"
             android:textStyle="bold"
             android:textSize="14sp"
             android:gravity="center"
-            android:width="60dip"
-            android:height="20dip"
             android:background="@drawable/gray_bar_bg"
         />
         <TextView android:id="@+id/item2"
@@ -385,69 +390,48 @@
             android:textStyle="bold"
             android:textSize="14sp"
             android:gravity="center"
-            android:width="60dip"
-            android:height="20dip"
             android:background="@drawable/gray_bar_bg"
             android:text="거래처"
         />
         <TextView android:id="@+id/item3"
-            android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="1"
+        android:layout_width="80dp"
+        android:layout_height="fill_parent"
             android:textColor="#d7d7d7"
             android:textStyle="bold"
             android:textSize="14sp"
             android:gravity="center"
-            android:width="60dip"
-            android:height="20dip"
             android:background="@drawable/gray_bar_bg"
             android:text="총매입가"
         />
         <TextView android:id="@+id/item4"
-            android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="1"
+	        android:layout_width="60dp"
+	        android:layout_height="fill_parent"
             android:textColor="#d7d7d7"
             android:textStyle="bold"
             android:textSize="14sp"
             android:gravity="center"
-            android:width="60dip"
-            android:height="20dip"
             android:background="@drawable/gray_bar_bg"
             android:text="수량"
         />
-        <!-- 
-        <TextView android:id="@+id/item5"
-            android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="1"
-            android:textColor="#d7d7d7"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:gravity="center"
-            android:width="60dip"
-            android:height="20dip"
-            android:background="@drawable/gray_bar_bg"
-            android:text="선택"
-        />
-        -->
     </LinearLayout>
 
     <!-- List Divider -->
-    <View android:layout_width="fill_parent"
-        android:layout_height="1dip"
+    <View 
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
         android:background="?android:attr/listDivider" />
  
     <!-- ListView (grid_items) -->
     <LinearLayout android:id="@+id/layout"
         android:layout_width="match_parent"
-        android:layout_height="178dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         >
 
         <ListView
             android:id="@+id/listviewReadyToSendList"
-            android:layout_width="fill_parent"
-            android:layout_height="177dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             >
 
         </ListView>
@@ -456,38 +440,16 @@
     <LinearLayout
         android:id="@+id/linearLayout8"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:orientation="horizontal"
         android:background="@android:color/darker_gray"
-        android:layout_gravity="center" >
-
-        <Button
-            android:id="@+id/buttonSend"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.7"
-            android:layout_gravity="center"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:background="@drawable/clear_all_btn"/>
-        
-        <Button
-            android:id="@+id/buttonDelete"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.7"
-			android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:background="@drawable/purchase_delete_btn" />
+        android:layout_gravity="right" >
 
         <Button
             android:id="@+id/buttonSendAll"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
 			android:scaleX="0.8"
             android:scaleY="0.8"
             android:background="@drawable/purchase_allsave_btn" />
