--- a/res/layout/activity_manage_product.xml
+++ b/res/layout/activity_manage_product.xml
@@ -137,14 +137,59 @@
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="0dip"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.62"
+	        android:layout_marginRight="20dp"
             android:text="분류"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#ffffff"
             android:textSize="14sp" />
         
+        
+         <Button
+	        android:id="@+id/buttonClassificationType1"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="5dp"
+            android:onClick="onClassification1" />
+         
+         <Button
+	        android:id="@+id/buttonClassificationType2"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="5dp"
+            android:onClick="onClassification2" />
+         
+         <Button
+	        android:id="@+id/buttonClassificationType3"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="5dp"
+            android:onClick="onClassification3" />
+         
+					    <!-- 
+					    <Spinner
+				            android:id="@+id/spinnerClassificationType1"
+				            android:layout_width="wrap_content"
+				            android:layout_height="wrap_content"
+				            android:prompt="@string/choose_classification_type"
+				            android:textSize="14sp" />
+					    
+					    <Spinner
+				            android:id="@+id/spinnerClassificationType2"
+				            android:layout_width="wrap_content"
+				            android:layout_height="wrap_content"
+				            android:prompt="@string/choose_classification_type"
+				            android:textSize="14sp" />
+					    
+					    <Spinner
+				            android:id="@+id/spinnerClassificationType3"
+				            android:layout_width="wrap_content"
+				            android:layout_height="wrap_content"
+				            android:prompt="@string/choose_classification_type"
+				            android:textSize="14sp" />
+				     -->
+        <!-- 
          <EditText
              android:id="@+id/editTextCustomerClassification1"
              android:layout_width="0dip"
@@ -179,7 +224,7 @@
 	        android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
 	        android:textSize="14sp"/>
-    
+    -->
     </LinearLayout>
 
 	<LinearLayout
@@ -231,7 +276,7 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="0.8"
-            android:entries="@array/group_type"
+            android:entries="@array/good_use"
             android:prompt="@string/choose_group_type" />
     
     </LinearLayout>
