--- a/res/layout/activity_manage_sales.xml
+++ b/res/layout/activity_manage_sales.xml
@@ -88,7 +88,7 @@
              android:textSize="14sp"
              android:textColor="#000000"
              android:background="@drawable/white_text_box_small" 
-             android:inputType="text"
+             android:inputType="number"
              android:singleLine="true"/>
         
          <Button
@@ -154,7 +154,7 @@
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
-            android:inputType="text"
+            android:inputType="number"
             android:ems="10"
             android:singleLine="true"/>
         
