--- a/res/layout/activity_manage_stock.xml
+++ b/res/layout/activity_manage_stock.xml
@@ -63,7 +63,7 @@
             android:layout_weight="0.8"
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
-            android:inputType="text"
+            android:inputType="number"
             android:ems="10"
             android:textSize="12sp"  />
         
