--- a/res/layout/activity_purchase_payment_status.xml
+++ b/res/layout/activity_purchase_payment_status.xml
@@ -141,7 +141,7 @@
              android:ems="10"
              android:textSize="14sp"
              android:textColor="#000000"
-             android:inputType="text"
+             android:inputType="number"
              android:singleLine="true"
              android:background="@drawable/white_text_box_small" />
 
