레이아웃 및 매입/매출 쿼리 수정

--- a/res/layout/activity_payment_detail_view.xml
+++ b/res/layout/activity_payment_detail_view.xml
@@ -111,158 +111,132 @@
 	        >
 		        <TextView android:id="@+id/item1"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="50dp"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="순번"
 		        />
 		        <TextView android:id="@+id/item2"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="110dp"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="처리년월"
 		        />
 		        <TextView android:id="@+id/item3"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="110dp"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="전표번호"
 		        />
 		        <TextView android:id="@+id/item4"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="75dip"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="구분"
 		        />
 		        <TextView android:id="@+id/item5"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="75dip"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="이월"
 		        />
 		        
 		        <TextView android:id="@+id/item6"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="75dip"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="매입금액"
 		        />
 		        <TextView android:id="@+id/item7"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="75dip"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="반품금액"
 		        />
 		        <TextView android:id="@+id/item8"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="75dip"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="할인금액"
 		        />
 		        <TextView android:id="@+id/item9"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="75dip"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="장려금"
 		        />
 		        <TextView android:id="@+id/item10"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="75dip"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="지급금액"
 		        />
 		        <TextView android:id="@+id/item11"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="75dip"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="입금금액"
 		        />
 		        <TextView android:id="@+id/item12"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="75dip"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="미지급금액"
 		        />
 		        <TextView android:id="@+id/item13"
 		            android:layout_height="fill_parent"
-					android:layout_width="wrap_content"
+					android:layout_width="75dip"
 					android:textColor="#d7d7d7"
 					android:textStyle="bold"
 					android:textSize="14sp"
 					android:gravity="center"
-					android:width="75dip"
-					android:height="20dip"
 					android:background="@drawable/gray_bar_bg"
 		            android:text="비고"
 		        />
