--- a/res/layout/activity_customer_product_detail_view.xml
+++ b/res/layout/activity_customer_product_detail_view.xml
@@ -115,8 +115,7 @@
        >
         <TextView android:id="@+id/item1"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
-			android:layout_weight="1"
+			android:layout_width="110dp"			
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
 			android:textSize="14sp"
@@ -137,8 +136,7 @@
         />
         <TextView android:id="@+id/item3"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
-			android:layout_weight="1"
+			android:layout_width="60dp"
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
 			android:textSize="14sp"
@@ -148,8 +146,7 @@
         />
         <TextView android:id="@+id/item4"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
-			android:layout_weight="1"
+			android:layout_width="60dp"
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
 			android:textSize="14sp"
@@ -167,11 +164,11 @@
  
     <!-- ListView (grid_items) -->
     <LinearLayout android:id="@+id/layout"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         >
         <ListView android:id="@+id/listviewCustomerProductDetailViewList"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:focusable = "false" 
             android:clickable="false"
