--- a/res/layout/activity_customer_purchase_payment_detail.xml
+++ b/res/layout/activity_customer_purchase_payment_detail.xml
@@ -134,10 +134,9 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="#000000"
-            android:textSize="14sp"
-             />
-	        
+            android:textColor="#ffffff"
+            android:textSize="14sp" />
+
 	</LinearLayout>
 
     <!-- Header -->
