--- a/res/layout/activity_listview_item13.xml
+++ b/res/layout/activity_listview_item13.xml
@@ -5,83 +5,68 @@
     android:orientation="horizontal" >
     
     <TextView android:id="@+id/item1"
-        android:text="item1"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
-        
+        android:layout_width="50dp"        
+		android:gravity="center"
     />
     <TextView android:id="@+id/item2"
-        android:text="item2"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="110dp"    
+		android:gravity="center"
     />
     <TextView android:id="@+id/item3"
-        android:text="item3"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="110dip"    
+		android:gravity="center"
     />
     <TextView android:id="@+id/item4"
-        android:text="item4"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="75dp"    
+		android:gravity="center"
     />
     <TextView android:id="@+id/item5"
-        android:text="item5"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="75dip"    
+		android:gravity="center"
     />
     <TextView android:id="@+id/item6"
-        android:text="item6"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="75dip"    
+		android:gravity="center"
     />
     <TextView android:id="@+id/item7"
-        android:text="item7"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="75dip"    
+		android:gravity="center"
     />
     <TextView android:id="@+id/item8"
-        android:text="item8"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="75dip"    
+		android:gravity="center"
     />
     <TextView android:id="@+id/item9"
-        android:text="item9"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="75dip"    
+		android:gravity="center"
     />
     <TextView android:id="@+id/item10"
-        android:text="item10"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="75dip"    
+		android:gravity="center"
     />
     <TextView android:id="@+id/item11"
-        android:text="item11"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="75dip"    
+		android:gravity="center"
     />
     <TextView android:id="@+id/item12"
-        android:text="item12"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="75dip"
     />
     <TextView android:id="@+id/item13"
-        android:text="item13"
         android:layout_height="fill_parent"
-        android:layout_width="wrap_content"
-        android:width="75dip"
+        android:layout_width="75dip"    
+		android:gravity="center"
     />
    
 </LinearLayout>
