--- a/res/layout/activity_manage_event.xml
+++ b/res/layout/activity_manage_event.xml
@@ -342,7 +342,6 @@
 	        android:scaleY="0.75"
             android:background="@drawable/purchase_delete_btn" />
        
-       
     </LinearLayout>
        
 	<LinearLayout
@@ -424,7 +423,8 @@
     <!-- ListView (grid_items) -->
     <LinearLayout android:id="@+id/layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         >
 
         <ListView
