--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,4 +4,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+	<dimen name="week_top_margin">0px</dimen>
+	<dimen name="week_left_margin">0px</dimen>
+	<dimen name="cell_width">38dp</dimen>
+	<dimen name="cell_heigh">53px</dimen>
+	<dimen name="cell_margin_top">50px</dimen>
+	<dimen name="cell_margin_left">50px</dimen>
+	<dimen name="cell_text_size">26px</dimen>
 </resources>
