--- a/res/layout/activity_input_question.xml
+++ b/res/layout/activity_input_question.xml
@@ -76,6 +76,10 @@
 	        android:background="@drawable/white_text_box_small"
 	        android:ems="10"
 	        android:inputType="phone"
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false"
 	        android:textColor="#000000" />
 	    
 	    
@@ -128,7 +132,7 @@
 	    
 	    
 	    <EditText
-	        android:id="@+id/editTextCustomerCode"
+	        android:id="@+id/editTextContent"
 	        android:layout_width="0dip"
 	        android:layout_height="180dp"
 	        android:layout_weight="1"
