--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,11 +4,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-	<dimen name="week_top_margin">0px</dimen>
-	<dimen name="week_left_margin">0px</dimen>
-	<dimen name="cell_width">38dp</dimen>
+	<dimen name="week_top_margin">74px</dimen>
+	<dimen name="week_left_margin">40px</dimen>
+	<dimen name="cell_width">78px</dimen>
 	<dimen name="cell_heigh">53px</dimen>
-	<dimen name="cell_margin_top">50px</dimen>
-	<dimen name="cell_margin_left">50px</dimen>
+	<dimen name="cell_margin_top">92px</dimen>
+	<dimen name="cell_margin_left">39px</dimen>
 	<dimen name="cell_text_size">26px</dimen>
 </resources>
