--- a/res/layout/activity_listview_item3.xml
+++ b/res/layout/activity_listview_item3.xml
@@ -23,7 +23,7 @@
         android:layout_height="fill_parent"
         android:layout_width="0dip"
         android:layout_weight="1"
-        android:gravity="center"
+        android:gravity="right"
     />
 
 </LinearLayout>
