--- a/res/layout/activity_manage_event_list.xml
+++ b/res/layout/activity_manage_event_list.xml
@@ -12,9 +12,18 @@
 	<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
         android:orientation="horizontal" >
 
+        <CheckBox
+            android:id="@+id/checkBoxCurrent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="적용중인 것만 보기"
+            android:checked="true"
+            android:textSize="14sp"
+        	/>
+        
        <Button
 	        android:id="@+id/buttonNewEvent"
 	        style="?android:attr/buttonStyleSmall"
@@ -24,14 +33,13 @@
 	        android:scaleY="0.75"
 	        android:background="@drawable/replace_btn"
 	        android:onClick="onNewEvent" />
-       
     </LinearLayout>
     
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dip" >
+        android:layout_marginTop="5dp" >
 
         <TextView android:id="@+id/item1"
             android:layout_height="fill_parent"
